symbolic_apps_iconsdir = join_paths(apps_iconsdir, 'symbolic')

regular_files = [
    'anydesk-symbolic.svg',
    'assistant-symbolic.svg',
    'audacity-symbolic.svg',
    'bleachbit-symbolic.svg',
    'btop-symbolic.svg',
    'clamtk-symbolic.svg',
    'CMakeSetup-symbolic.svg',
    'com.github.eneshecan.WhatsAppForLinux-symbolic.svg',
    'com.obsproject.Studio-symbolic.svg',
    'darktable-symbolic.svg',
    'filezilla-symbolic.svg',
    'firefox-symbolic.svg',
    'fr.handbrake.ghb-symbolic.svg',
    'fuse-emulator-symbolic.svg',
    'gda-control-center-symbolic.svg',
    'gimp-symbolic.svg',
    'google-chrome-symbolic.svg',
    'google-earth-symbolic.svg',
    'gparted-symbolic.svg',
    'gpsd-logo-symbolic.svg',
    'grub-customizer-symbolic.svg',
    'gsmartcontrol-symbolic.svg',
    'gufw-symbolic.svg',
    'hardinfo-symbolic.svg',
    'java-openjdk-symbolic.svg',
    'kdenlive-symbolic.svg',
    'kruler-symbolic.svg',
    'libreoffice-base-symbolic.svg',
    'libreoffice-calc-symbolic.svg',
    'libreoffice-draw-symbolic.svg',
    'libreoffice-impress-symbolic.svg',
    'libreoffice-math-symbolic.svg',
    'libreoffice-startcenter-symbolic.svg',
    'libreoffice-writer-symbolic.svg',
    'linguist-symbolic.svg',
    'menulibre-symbolic.svg',
    'microsoft-edge-symbolic.svg',
    'micro-symbolic.svg',
    'net.poedit.Poedit-symbolic.svg',
    'nufraw-symbolic.svg',
    'openra-cnc-symbolic.svg',
    'openra-d2k-symbolic.svg',
    'openra-ra-symbolic.svg',
    'org.inkscape.Inkscape-symbolic.svg',
    'popcorntime-symbolic.svg',
    'preferences-system-network-symbolic.svg',
    'projectM-symbolic.svg',
    'qdbusviewer-symbolic.svg',
    'QtProject-designer-symbolic.svg',
    'qv4l2-symbolic.svg',
    'rawtherapee-symbolic.svg',
    'skypeforlinux-symbolic.svg',
    'soundconverter-symbolic.svg',
    'spotify-symbolic.svg',
    'stellarium-symbolic.svg',
    'stoken-gui-symbolic.svg',
    'system-software-install-symbolic.svg',
    'TeamViewer-symbolic.svg',
    'telegram-symbolic.svg',
    'tor-browser-symbolic.svg',
    'visual-studio-code-symbolic.svg',
    'vlc-symbolic.svg',
    'windscribe-symbolic.svg',
    'Zoom-symbolic.svg',
]

link_files = {
    'com.github.eneshecan.WhatsAppForLinux-symbolic.svg': [
        'com.gigitux.gtkwhats-symbolic.svg',
        'whatsapp-symbolic.svg',
        'io.bit3.WhatsAppQT-symbolic.svg',
        'io.github.mimbrero.WhatsAppDesktop-symbolic.svg',
        'whatsdesk-symbolic.svg',
        'whatsapp-nativefier-symbolic.svg',
        'whatsapp-for-linux-symbolic.svg',
        'whatsapp-desktop-symbolic.svg',
    ],
    'libreoffice-startcenter-symbolic.svg': [
        'libreoffice5.4-symbolic.svg',
        'libreoffice6.3-main-symbolic.svg',
        'libreoffice7.3-main-symbolic.svg',
        'libreoffice7.4-startcenter-symbolic.svg',
        'libreoffice5.0-symbolic.svg',
        'libreoffice6.2-startcenter-symbolic.svg',
        'libreoffice5.2-startcenter-symbolic.svg',
        'libreoffice6.0-main-symbolic.svg',
        'libreoffice4.2-startcenter-symbolic.svg',
        'libreoffice4.2-symbolic.svg',
        'libreoffice7.2-main-symbolic.svg',
        'libreoffice7.3-startcenter-symbolic.svg',
        'libreoffice6.3-startcenter-symbolic.svg',
        'libreoffice7.1-startcenter-symbolic.svg',
        'libreoffice5.3-main-symbolic.svg',
        'libreoffice6.4-main-symbolic.svg',
        'libreoffice5.2-main-symbolic.svg',
        'libreoffice5.4-startcenter-symbolic.svg',
        'libreoffice5.4-main-symbolic.svg',
        'libreoffice6.4-startcenter-symbolic.svg',
        'libreoffice5.0-main-symbolic.svg',
        'libreoffice5.1-main-symbolic.svg',
        'libreoffice7.1-main-symbolic.svg',
        'libreoffice5.1-startcenter-symbolic.svg',
        'libreoffice5.1-symbolic.svg',
        'libreoffice-main-symbolic.svg',
        'libreoffice7.2-startcenter-symbolic.svg',
        'libreoffice6.2-main-symbolic.svg',
        'libreoffice5.3-startcenter-symbolic.svg',
        'libreoffice6.0-symbolic.svg',
        'libreoffice5.0-startcenter-symbolic.svg',
        'libreoffice6.0-startcenter-symbolic.svg',
        'libreoffice7.0-main-symbolic.svg',
        'libreoffice7.0-startcenter-symbolic.svg',
        'libreoffice5.2-symbolic.svg',
        'org.libreoffice.LibreOffice.startcenter-symbolic.svg',
        'libreoffice5.3-symbolic.svg',
        'libreoffice7.4-main-symbolic.svg',
    ],
    'java-openjdk-symbolic.svg': [
        'sun-javaws-jre10-symbolic.svg',
        'java12-openjdk-symbolic.svg',
        'sun-java-jdk9-symbolic.svg',
        'sun-javaws32-jdk7-symbolic.svg',
        'java20-openjdk-symbolic.svg',
        'java-11-openjdk-symbolic.svg',
        'sun-javaws32-jdk6-symbolic.svg',
        'sun-java-jdk6-symbolic.svg',
        'java-1.6.0-symbolic.svg',
        'sun-javaws-jdk10-symbolic.svg',
        'java19-openjdk-symbolic.svg',
        'java-12-openjdk-symbolic.svg',
        'javaws-symbolic.svg',
        'sun-java-jre10-symbolic.svg',
        'java10-openjdk-symbolic.svg',
        'java-10-openjdk-symbolic.svg',
        'java-1.8.0-symbolic.svg',
        'oracle_java6-symbolic.svg',
        'sun-java32-jdk5-symbolic.svg',
        'sun-java32-jdk6-symbolic.svg',
        'sun-javaws32-jdk8-symbolic.svg',
        'sun-java-jdk10-symbolic.svg',
        'sun-javaws-jdk6-symbolic.svg',
        'java-1.7.0-symbolic.svg',
        'java17-openjdk-symbolic.svg',
        'sun-java32-jdk8-symbolic.svg',
        'java15-openjdk-symbolic.svg',
        'sun-javaws-jdk8-symbolic.svg',
        'oracle_javaws-symbolic.svg',
        'sun-javaws-jdk9-symbolic.svg',
        'java-jdk-symbolic.svg',
        'java-13-openjdk-symbolic.svg',
        'sun-java-jdk5-symbolic.svg',
        'java8-openjdk-symbolic.svg',
        'sun-javaws-jre8-symbolic.svg',
        'sun-java-jdk8-symbolic.svg',
        'java11-openjdk-symbolic.svg',
        'java9-openjdk-symbolic.svg',
        'java18-openjdk-symbolic.svg',
        'java16-openjdk-symbolic.svg',
        'java14-openjdk-symbolic.svg',
        'oracle_java8-symbolic.svg',
        'oracle_java7-symbolic.svg',
        'sun-java32-jdk7-symbolic.svg',
        'oracle_java9-symbolic.svg',
        'java-1.8.0-openjdk-symbolic.svg',
        'sun-java-jdk7-symbolic.svg',
        'sun-java-jre8-symbolic.svg',
        'java13-openjdk-symbolic.svg',
        'applications-java-symbolic.svg',
        'sun-javaws-jdk7-symbolic.svg',
        'java-14-openjdk-symbolic.svg',
    ],
    'libreoffice-impress-symbolic.svg': [
        'libreoffice5.3-impress-symbolic.svg',
        'libreoffice5.0-impress-symbolic.svg',
        'libreoffice7.0-impress-symbolic.svg',
        'libreoffice6.4-impress-symbolic.svg',
        'libreoffice5.2-impress-symbolic.svg',
        'libreoffice6.3-impress-symbolic.svg',
        'libreoffice7.4-impress-symbolic.svg',
        'libreoffice7.3-impress-symbolic.svg',
        'libreoffice6.2-impress-symbolic.svg',
        'libreoffice7.2-impress-symbolic.svg',
        'libreoffice7.1-impress-symbolic.svg',
        'libreoffice5.4-impress-symbolic.svg',
        'org.libreoffice.LibreOffice.impress-symbolic.svg',
        'libreoffice6.0-impress-symbolic.svg',
        'libreoffice5.1-impress-symbolic.svg',
    ],
    'libreoffice-math-symbolic.svg': [
        'libreoffice7.1-math-symbolic.svg',
        'libreoffice4.2-math-symbolic.svg',
        'libreoffice5.4-math-symbolic.svg',
        'libreoffice6.2-math-symbolic.svg',
        'libreoffice5.3-math-symbolic.svg',
        'libreoffice7.2-math-symbolic.svg',
        'libreoffice6.4-math-symbolic.svg',
        'libreoffice7.3-math-symbolic.svg',
        'libreoffice7.4-math-symbolic.svg',
        'libreoffice6.3-math-symbolic.svg',
        'libreoffice5.1-math-symbolic.svg',
        'libreoffice5.0-math-symbolic.svg',
        'libreoffice5.2-math-symbolic.svg',
        'libreoffice7.0-math-symbolic.svg',
        'libreoffice6.0-math-symbolic.svg',
        'org.libreoffice.LibreOffice.math-symbolic.svg',
    ],
    'qdbusviewer-symbolic.svg': [
        'qdbusviewer-qt4-symbolic.svg',
        'qdbusviewer5-symbolic.svg',
        'io.qt.Qdbusviewer-symbolic.svg',
        'QtProject-qdbusviewer-symbolic.svg',
        'qdbusviewer-qt5-symbolic.svg',
        'qtdbusviewer-symbolic.svg',
    ],
    'skypeforlinux-symbolic.svg': [
        'com.skype.Client.svg',
        'skype-symbolic.svg',
        'ms-skype-symbolic.svg',
    ],
    'linguist-symbolic.svg': [
        'linguist5-symbolic.svg',
        'linguist-qt5-symbolic.svg',
        'qtlinguist-symbolic.svg',
        'linguist-qt4-symbolic.svg',
        'io.qt.Linguist.svg',
        'QtProject-linguist-symbolic.svg',
    ],
    'TeamViewer-symbolic.svg': [
        'teamviewer-symbolic.svg',
    ],
    'google-chrome-symbolic.svg': [
        'chrome-ighkikkfkalojiibipjigpccggljgdff-Default-symbolic.svg',
        'google-chrome2-symbolic.svg',
        'com.google.Chrome.svg',
        'chromium-browser-symbolic.svg',
        'googlechrome-symbolic.svg',
    ],
    'microsoft-edge-symbolic.svg': [
        'com.microsoft.Edge.svg',
    ],
    'kruler-symbolic.svg': [
        'gnome-screenruler-symbolic.svg',
        'screenruler-icon-symbolic.svg',
        'org.kde.kruler.svg',
        'screenruler-symbolic.svg',
    ],
    'com.obsproject.Studio-symbolic.svg': [
        'obs-symbolic.svg',
    ],
    'libreoffice-draw-symbolic.svg': [
        'libreoffice5.4-draw-symbolic.svg',
        'libreoffice6.3-draw-symbolic.svg',
        'libreoffice4.2-draw-symbolic.svg',
        'libreoffice5.3-draw-symbolic.svg',
        'libreoffice6.4-draw-symbolic.svg',
        'libreoffice7.4-draw-symbolic.svg',
        'libreoffice7.0-draw-symbolic.svg',
        'libreoffice6.2-draw-symbolic.svg',
        'libreoffice7.3-draw-symbolic.svg',
        'libreoffice6.0-draw-symbolic.svg',
        'libreoffice7.2-draw-symbolic.svg',
        'libreoffice5.2-draw-symbolic.svg',
        'libreoffice5.1-draw-symbolic.svg',
        'libreoffice7.1-draw-symbolic.svg',
        'org.libreoffice.LibreOffice.draw-symbolic.svg',
        'libreoffice5.0-draw-symbolic.svg',
    ],
    'spotify-symbolic.svg': [
        'com.spotify.Client-symbolic.svg',
        'eu.tiliado.NuvolaAppSpotify-symbolic.svg',
        'spotify-client-symbolic.svg',
        'spotify-linux-48x48-symbolic.svg',
        'nuvolaplayer3_spotify-symbolic.svg',
        'spotify-qt-symbolic.svg',
        'spotify-linux-512x512-symbolic.svg',
        'Spotify-symbolic.svg',
    ],
    'assistant-symbolic.svg': [
        'assistant-qt5-symbolic.svg',
        'assistant-qt4-symbolic.svg',
        'io.qt.Assistant-symbolic.svg',
        'qtassistant-symbolic.svg',
        'assistant5-symbolic.svg',
        'QtProject-assistant-symbolic.svg',
    ],
    'stellarium-symbolic.svg': [
        'org.stellarium.Stellarium.svg',
    ],
    'hardinfo-symbolic.svg': [
        'hwloc-symbolic.svg',
    ],
    'openra-cnc-symbolic.svg': [
        'net.openra.OpenRA.openra-cnc-symbolic.svg',
    ],
    'net.poedit.Poedit-symbolic.svg': [
        'poedit-symbolic.svg',
    ],
    'kdenlive-symbolic.svg': [
        'org.kde.kdenlive.svg',
    ],
    'libreoffice-writer-symbolic.svg': [
        'libreoffice5.0-writer-symbolic.svg',
        'libreoffice7.2-writer-symbolic.svg',
        'libreoffice7.4-writer-symbolic.svg',
        'libreoffice5.1-writer-symbolic.svg',
        'libreoffice6.2-writer-symbolic.svg',
        'libreoffice5.2-writer-symbolic.svg',
        'libreoffice7.0-writer-symbolic.svg',
        'libreoffice7.3-writer-symbolic.svg',
        'libreoffice6.0-writer-symbolic.svg',
        'libreoffice7.1-writer-symbolic.svg',
        'libreoffice6.4-writer-symbolic.svg',
        'libreoffice4.2-writer-symbolic.svg',
        'libreoffice6.3-writer-symbolic.svg',
        'org.libreoffice.LibreOffice.writer-symbolic.svg',
        'libreoffice5.4-writer-symbolic.svg',
        'libreoffice5.3-writer-symbolic.svg',
    ],
    'google-earth-symbolic.svg': [
        'google-earth-pro-symbolic.svg',
        'googleearth-symbolic.svg',
    ],
    'libreoffice-base-symbolic.svg': [
        'libreoffice6.4-base-symbolic.svg',
        'org.libreoffice.LibreOffice.base-symbolic.svg',
        'libreoffice5.2-base-symbolic.svg',
        'libreoffice5.1-base-symbolic.svg',
        'libreoffice7.0-base-symbolic.svg',
        'libreoffice4.2-base-symbolic.svg',
        'libreoffice5.3-base-symbolic.svg',
        'libreoffice7.2-base-symbolic.svg',
        'libreoffice6.3-base-symbolic.svg',
        'libreoffice6.2-base-symbolic.svg',
        'libreoffice7.3-base-symbolic.svg',
        'libreoffice5.0-base-symbolic.svg',
        'libreoffice6.0-base-symbolic.svg',
        'libreoffice7.1-base-symbolic.svg',
        'libreoffice7.4-base-symbolic.svg',
        'libreoffice5.4-base-symbolic.svg',
    ],
    'clamtk-symbolic.svg': [
        'com.gitlab.davem.ClamTk.svg',
        'clamav-symbolic.svg',
    ],
    'system-software-install-symbolic.svg': [
        'pamac-manager-symbolic.svg',
        'system-software-update-symbolic.svg',
        'system-software-installer-symbolic.svg',
        'pamac-updater-symbolic.svg',
        'pamac-symbolic.svg',
    ],
    'libreoffice-calc-symbolic.svg': [
        'libreoffice5.4-calc-symbolic.svg',
        'libreoffice5.2-calc-symbolic.svg',
        'libreoffice6.0-calc-symbolic.svg',
        'libreoffice7.3-calc-symbolic.svg',
        'libreoffice5.3-calc-symbolic.svg',
        'libreoffice7.0-calc-symbolic.svg',
        'libreoffice5.1-calc-symbolic.svg',
        'libreoffice6.3-calc-symbolic.svg',
        'libreoffice7.1-calc-symbolic.svg',
        'libreoffice5.0-calc-symbolic.svg',
        'libreoffice6.2-calc-symbolic.svg',
        'libreoffice4.2-calc-symbolic.svg',
        'libreoffice6.4-calc-symbolic.svg',
        'libreoffice7.2-calc-symbolic.svg',
        'libreoffice7.4-calc-symbolic.svg',
        'org.libreoffice.LibreOffice.calc-symbolic.svg',
    ],
    'menulibre-symbolic.svg': [
        'org.bluesabre.MenuLibre.svg',
    ],
    'fuse-emulator-symbolic.svg': [
        'net.sf.fuse_emulator.svg',
        'fuse-symbolic.svg',
    ],
    'tor-browser-symbolic.svg': [
        'torbrowser-symbolic.svg',
        'tor-browser-ru-symbolic.svg',
        'com.github.micahflee.torbrowser-launcher.svg',
        'tor-symbolic.svg',
        'tor-browser-en-symbolic.svg',
    ],
    'Zoom-symbolic.svg': [
        'zoom-icon-symbolic.svg',
        'zoom-desktop-symbolic.svg',
        'us.zoom.Zoom.svg',
    ],
    'org.inkscape.Inkscape-symbolic.svg': [
        'inkscape-symbolic.svg',
        'inkscape-logo-symbolic.svg',
    ],
    'telegram-symbolic.svg': [
        'telegram-desktop-bin-symbolic.svg',
        'org.telegram.desktop-symbolic.svg',
        'telegram-desktop-symbolic.svg',
    ],
    'firefox-symbolic.svg': [
        'firefox-moilla-build-symbolic.svg',
        'org.mozilla.firefox-symbolic.svg',
        'firefox-original-symbolic.svg',
        'firefox-default-symbolic.svg',
        'firefox-esr-symbolic.svg',
        'org.mozilla.Firefox-symbolic.svg',
        'firefox-beta-symbolic.svg',
        'firefox-bin-symbolic.svg',
        'firefox-gtk3-symbolic.svg',
        'firefox-icon-symbolic.svg',
        'mozilla-firefox-symbolic.svg',
        'firefox-beta-bin-symbolic.svg',
    ],
    'projectM-symbolic.svg': [
        'net.sourceforge.projectM.svg',
    ],
    'popcorntime-symbolic.svg': [
        'popcorn-time-symbolic.svg',
        'popcorntime-ru-symbolic.svg',
    ],
    'QtProject-designer-symbolic.svg': [
        'io.qt.Designer-symbolic.svg',
    ],
    'anydesk-symbolic.svg': [
        'com.anydesk.Anydesk.svg',
    ],
    'soundconverter-symbolic.svg': [
        'org.soundconverter.SoundConverter-symbolic.svg',
    ],
    'darktable-symbolic.svg': [
        'org.darktable.Darktable.svg',
    ],
    'CMakeSetup-symbolic.svg': [
        'cmake-symbolic.svg',
        'cmake-gui-symbolic.svg',
        'CMakeSetup32-symbolic.svg',
    ],
    'openra-d2k-symbolic.svg': [
        'net.openra.OpenRA.openra-d2k-symbolic.svg',
    ],
    'audacity-symbolic.svg': [
        'org.audacityteam.Audacity.svg',
    ],
    'gimp-symbolic.svg': [
        'org.gimp.GIMP-symbolic.svg',
    ],
    'visual-studio-code-symbolic.svg': [
        'com.visualstudio.code-symbolic.svg',
        'code-symbolic.svg',
    ],
    'gda-control-center-symbolic.svg': [
        'gda-browser-5.0-symbolic.svg',
    ],
    'filezilla-symbolic.svg': [
        'org.filezillaproject.Filezilla.svg',
    ],
    'rawtherapee-symbolic.svg': [
        'com.rawtherapee.RawTherapee-symbolic.svg',
    ],
    'vlc-symbolic.svg': [
        'org.videolan.VLC.svg',
    ],
    'openra-ra-symbolic.svg': [
        'net.openra.OpenRA-symbolic.svg',
    ],
    'qv4l2-symbolic.svg': [
        'qvidcap-symbolic.svg',
    ],
}

install_data(regular_files, install_dir: symbolic_apps_iconsdir)

foreach dest_file, link_files_for_dest : link_files
    foreach link_file : link_files_for_dest
        install_symlink(link_file, install_dir: symbolic_apps_iconsdir, pointing_to: dest_file)
    endforeach
endforeach
